--- a/api/external/api-repository.yaml
+++ b/api/external/api-repository.yaml
@@ -17,360 +17,15 @@ tags:
     description: storages-alarm-Threshold-api
   - name: storages-api
     description: storages-api
+  - name: storages-internal-api
   - name: nas-distribution-storages-api
     description: nas-distribution-storages-api
 paths:
-  /v1/backup-storage/nodes:
-    get:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 查询节点信息
-      operationId: getAllNodeInfoUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/AnyBackupNodeVO'
-              originalRef: AnyBackupNodeVO
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-  /v1/backup-storage/nodes/relocation:
-    post:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 回迁指定节点
-      operationId: relocationNodeUsingPOST_1
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - in: body
-          name: nodeRelocation
-          description: 回迁指定节点
-          required: true
-          schema:
-            $ref: '#/definitions/AnyBackupNodeRelocation'
-            originalRef: AnyBackupNodeRelocation
-      responses:
-        '200':
-          description: OK
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-  /v1/backup-storage/nodes/relocation/info:
-    get:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 查询需要回迁的节点信息
-      operationId: nodeRelocationInfoUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/AnyBackupNodeRelocation'
-              originalRef: AnyBackupNodeRelocation
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-  /v1/backup-storage/nodes/{nodeId}/{type}:
-    get:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 查询节点路径空闲容量
-      operationId: getNodeFreeSizeUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - name: nodeId
-          in: path
-          description: 节点ID
-          required: true
-          type: string
-          pattern: ^[a-zA-Z0-9]{1,1024}$
-        - name: type
-          in: path
-          description: 卷类型
-          required: true
-          type: integer
-          format: int32
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/AnyBackupPathInfo'
-              originalRef: AnyBackupPathInfo
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-  /v1/backup-storage/volumes:
-    get:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 查询标准备份池卷
-      operationId: getAllVolsUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - name: index
-          in: query
-          description: 页数
-          required: false
-          type: integer
-          default: 1
-          minimum: 0.0
-          exclusiveMinimum: false
-          format: int32
-          allowEmptyValue: false
-        - name: size
-          in: query
-          description: 每页数量
-          required: false
-          type: integer
-          default: 5
-          maximum: 200.0
-          exclusiveMaximum: false
-          minimum: 0.0
-          exclusiveMinimum: false
-          format: int32
-          allowEmptyValue: false
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/BackupVolumePageData«StandardBackupVolVO»'
-            originalRef: BackupVolumePageData«StandardBackupVolVO»
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-    post:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 创建标准备份池卷
-      operationId: addVolUsingPOST
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - in: body
-          name: standardBackupVol
-          description: 标准备份池卷
-          required: true
-          schema:
-            $ref: '#/definitions/StandardBackupVol'
-            originalRef: StandardBackupVol
-      responses:
-        '200':
-          description: OK
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-  /v1/backup-storage/volumes/index/{nodeId}:
-    get:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 查询索引卷是否存在
-      operationId: isIndexVolExistUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - name: nodeId
-          in: path
-          description: 节点ID
-          required: true
-          type: string
-          pattern: ^[a-zA-Z0-9]{1,1024}$
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/AnyBackupVolExist'
-            originalRef: AnyBackupVolExist
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-  /v1/backup-storage/volumes/{name}:
-    get:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 查询卷是否存在
-      operationId: isVolExistUsingGET
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - name: name
-          in: path
-          description: 卷名
-          required: true
-          type: string
-          pattern: ^[a-zA-Z0-9]{3,30}$
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/AnyBackupVolExist'
-            originalRef: AnyBackupVolExist
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
-    delete:
-      x-product: OceanProtect X
-      tags:
-        - backup-vol-controller
-      summary: 删除标准备份池卷
-      operationId: delVolUsingDELETE
-      produces:
-        - '*/*'
-      parameters:
-        - name: X-Auth-Token
-          in: header
-          description: Access token
-          required: true
-          type: string
-        - name: name
-          in: path
-          description: 标准备份池卷名
-          required: true
-          type: string
-          pattern: ^[a-zA-Z0-9]{3,30}$
-      responses:
-        '200':
-          description: OK
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-      security:
-        - Authorization:
-            - global
-      deprecated: false
   /v1/local-storage:
     get:
-      x-product: CyberEngine,OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -534,7 +189,17 @@ paths:
             - global
   /v1/product-storages:
     get:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - product-storages-api
       summary: 分页查询
@@ -552,7 +217,6 @@ paths:
           description: 查询条件
           required: false
           type: string
-          allowEmptyValue: false
         - name: orders
           in: query
           description: 排序方式
@@ -561,21 +225,18 @@ paths:
           items:
             type: string
           collectionFormat: multi
-          allowEmptyValue: false
         - name: page
           in: query
           description: 分页起始页面
           required: false
           type: integer
           format: int32
-          allowEmptyValue: false
         - name: size
           in: query
           description: 分页数量
           required: false
           type: integer
           format: int32
-          allowEmptyValue: false
       responses:
         '200':
           description: OK
@@ -593,7 +254,17 @@ paths:
             - global
       deprecated: false
     post:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - product-storages-api
       summary: 创建存储信息
@@ -674,7 +345,17 @@ paths:
         - Authorization:
             - global
     put:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - product-storages-api
       summary: 更新存储信息
@@ -717,7 +398,17 @@ paths:
             - global
       deprecated: false
     delete:
-      x-product: OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - product-storages-api
       summary: 删除存储信息
@@ -803,6 +494,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 0
     post:
       x-product: OceanProtect X
       x-impact-subsystem: 不影响
@@ -851,6 +543,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 1
   /v1/storages/local:
     get:
       x-product: OceanProtect X
@@ -889,6 +582,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 2
   /v1/storages/{id}/alarm-threshold:
     get:
       x-product: OceanProtect X
@@ -1084,6 +778,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 3
     put:
       x-product: OceanProtect X
       x-impact-subsystem: 不影响
@@ -1139,6 +834,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 4
     delete:
       x-product: OceanProtect X
       x-impact-subsystem: 不影响
@@ -1183,6 +879,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 5
   /v1/storages/{storageId}/action/import:
     post:
       x-product: OceanProtect X
@@ -1229,6 +926,7 @@ paths:
       security:
         - Authorization:
             - global
+      x-order: 7
   /v1/storages/nas/distribution:
     post:
       x-product: OceanProtect X
@@ -1528,6 +1226,94 @@ paths:
           description: ''
           schema:
             type: string
+  /v1/internal/storages/{storageId}:
+    get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-product: OceanProtect X
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      tags:
+        - storages-internal-api
+      summary: 查询存储库信息
+      operationId: queryFullStorageByIdUsingGET
+      produces:
+        - '*/*'
+      parameters:
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+        - name: storageId
+          in: path
+          description: 存储id
+          required: false
+          type: string
+          maxLength: 256
+          minLength: 1
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/CompleteStorageInfoRes'
+            originalRef: CompleteStorageInfoRes
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      security:
+        - Authorization:
+            - global
+  /v1/internal/storages/storage-info:
+    get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-product: OceanProtect X
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      tags:
+        - storages-internal-api
+      summary: 查询存储信息
+      description: 查询存储信息
+      operationId: storageInfoUsingGET
+      produces:
+        - '*/*'
+      parameters:
+        - name: X-Auth-Token
+          in: header
+          description: Access token
+          required: true
+          type: string
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/StorageInfos'
+            originalRef: CompleteStorageInfoRes
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      security:
+        - Authorization:
+            - global
 securityDefinitions:
   Authorization:
     type: apiKey
@@ -2653,3 +2439,15 @@ definitions:
         items:
           type: string
         description: 逻辑端口列表
+  StorageInfos:
+    type: array
+    items:
+      $ref: '#/definitions/StorageInfo'
+  UpdateImportJobRequest:
+    type: object
+    description: 更新 import job
+    properties:
+      CleanScanTaskResult:
+        type: boolean
+      JobId:
+        type: string
