--- a/api/internal/api-user-internal.yaml
+++ b/api/internal/api-user-internal.yaml
@@ -10,46 +10,21 @@ tags:
   - name: auth-internal-api
     description: 认证模块
   - name: users-internal-api
-    description: '${users-internal-api}'
+    description: ${users-internal-api}
 paths:
-  /v1/internal/auth/token:
-    post:
-      tags:
-        - auth-internal-api
-      summary: 获取token
-      operationId: genTokenUsingPOST_1
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      parameters:
-        - in: body
-          name: userInfo
-          description: userInfo
-          required: true
-          schema:
-            $ref: '#/definitions/UserInfo'
-            originalRef: UserInfo
-      responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/LoginResponseBody'
-            originalRef: LoginResponseBody
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      security:
-        - Authorization:
-            - global
-      deprecated: false
   /v1/internal/auth/user:
     get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - auth-internal-api
       summary: queryUserInfoByName
@@ -78,8 +53,19 @@ paths:
         - Authorization:
             - global
       deprecated: false
-  '/v1/internal/users/{userId}':
+  /v1/internal/users/{userId}:
     get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - users-internal-api
       summary: 查询单个用户
@@ -329,7 +315,7 @@ definitions:
       passLenVal:
         type: integer
         format: int32
-        description: '密码长度:8-64'
+        description: 密码长度:8-64
       passLockTime:
         type: integer
         format: int32
@@ -416,7 +402,7 @@ definitions:
     properties:
       accessControl:
         type: string
-        description: '访问控制  ALLOW_ACCESS_GUI, ALLOW_ACCESS_REST_API'
+        description: 访问控制  ALLOW_ACCESS_GUI, ALLOW_ACCESS_REST_API
       defaultUser:
         type: boolean
         description: 是否为内置默认用户，true-为内置默认用户，false-非内置默认用户
@@ -486,7 +472,7 @@ definitions:
       accessControlEnum:
         type: string
         example: ALLOW_ACCESS_GUI
-        description: '访问控制  ALLOW_ACCESS_GUI, ALLOW_ACCESS_REST_API'
+        description: 访问控制  ALLOW_ACCESS_GUI, ALLOW_ACCESS_REST_API
         enum:
           - ALLOW_ACCESS_GUI
           - ALLOW_ACCESS_REST_API
@@ -520,7 +506,7 @@ definitions:
       userName:
         type: string
         description: 用户名称。1、只能以字母、下划线、中文开头，由中文、数字、字母或者下划线组成的字符串。2、用户名长度：5-64
-        pattern: '^[a-zA-Z_\u4e00-\u9fa5]{1}[\u4e00-\u9fa5\w-]*$'
+        pattern: ^[a-zA-Z_\u4e00-\u9fa5]{1}[\u4e00-\u9fa5\w-]*$
       userPassword:
         type: string
         description: >-
@@ -531,7 +517,7 @@ definitions:
     properties:
       accessControl:
         type: string
-        description: '访问控制  ALLOW_ACCESS_GUI, ALLOW_ACCESS_REST_API'
+        description: 访问控制  ALLOW_ACCESS_GUI, ALLOW_ACCESS_REST_API
       defaultUser:
         type: boolean
         description: 是否为内置默认用户，true-为内置默认用户，false-非内置默认用户
