--- a/model/src/main/resources/api-cluster-internal.yaml
+++ b/model/src/main/resources/api-cluster-internal.yaml
@@ -10,58 +10,34 @@ basePath: /
 tags:
   - name: ${clusters-api}
 paths:
-  /v1/internal/storage-users/batch:
-    post:
-      x-product: OceanProtect X
+  /v1/internal/storage-role/add-permit:
+    put:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 30081
       x-auth-required: 'Y'
-      x-rd-admin-role: 'Y'
+      x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
       x-public-api: 'N'
       x-sysadmin-role: 'Y'
       tags:
         - ${clusters-api}
-      operationId: CreateStorageUserUsingBathPOST
-      consumes:
-        - application/json
-      summary: 批量创建存储用户
-      description: 批量创建存储用户
-      x-is-registered: 'N'
-      x-support-sdk: 'N'
-      produces:
-        - application/json
+      summary: 增加底座角色权限
+      description: 增加底座角色权限，1.3版本新增一个权限，1.2升级上来的用户没有新增的权限，提供给复制微服务用的
+      operationId: AddStorageRolePermitUsingPut
       parameters:
-        - in: body
-          name: CreateStorageUserUsingBathPOSTRequestBody
-          description: 创建存储用户请求参数
+        - name: addPermitParams
+          in: body
           required: true
+          description: 增加底座角色权限DoradoAddPermitParams对象
           schema:
-            items:
-              $ref: '#/definitions/DoradoAccountRequest'
-            type: array
-        - name: X-Auth-Token
-          in: header
-          required: true
-          description: Access token
-          type: string
-          minLength: 1
-          maxLength: 1024
+            $ref: '#/definitions/DoradoAddPermitParams'
       responses:
         '200':
-          description: Demo Information
-          schema:
-            items:
-              $ref: '#/definitions/StorageUserInfo'
-            type: array
-          headers:
-            X-request-id:
-              type: string
-              description: >-
-                This field is the request ID number for task tracking. Format is
-                request_uuid-timestamp-hostname.
+          description: 无返回值
 definitions:
   StorageUserInfo:
     properties:
@@ -127,3 +103,18 @@ definitions:
         minLength: 1
         maxLength: 256
     title: DoradoAccountRequest
+  DoradoAddPermitParams:
+    type: object
+    required:
+      - id
+      - permitList
+    properties:
+      id:
+        type: string
+        description: 角色id
+      permitList:
+        type: string
+        description: 权限
+      esn:
+        type: string
+        description: 集群esn
